--- a/carouselrecyclerview/build.gradle
+++ b/carouselrecyclerview/build.gradle
@@ -12,8 +12,6 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -32,10 +30,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.jackandphantom.carouselrecyclerview'
 }
 
 dependencies {
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.8.0'
 }
 
 ext {
